[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardboard-circuit"
version = "1.0.0"
authors = [
  { name="A. Serhat KILIÇOĞLU" },
]
description = "A racing game for children"
requires-python = ">=3.8"
dependencies = [
    "PyQt6",
    "pygame",
    "numpy",
]

[project.urls]
Repository = "https://github.com/shampuan/cardboard-circuit"

[project.scripts]
cardboard-circuit = "cardboard_circuit.main:main"

[tool.setuptools]
packages = ["cardboard_circuit"]

[tool.setuptools.package-data]
cardboard_circuit = [
    "cars/*",
    "disks/*",
    "effects/*",
    "sounds/*"
]
