[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardboard-circuit"
version = "1.0.0"

authors = [
    {name = "A. Serhat KILIÇOĞLU"}
]

description = "A racing game for children"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyQt6",
    "pygame",
    "numpy"
]

[project.urls]
Repository = "https://github.com/shampuan/cardboard-circuit"

[project.scripts]
cardboard-circuit = "cardboardcircuit.main:main"

[tool.setuptools]
packages = ["cardboardcircuit"]

[tool.setuptools.package-data]
cardboardcircuit = [
    "caricon.png",
    "cars/*",
    "disks/*",
    "effects/*",
    "sounds/*"
]
